--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </main>
 
     <footer class="footer container fadeIn" aria-label="Rodapé">
-        <h3>Criado por <a href="https://www.instagram.com/brenda_a_s_dev/" target="_blank">@brenda-a-s-dev</a>.</h3>
+        <h3>Criado por <a href="https://www.instagram.com/brenda_a_s_dev/" target="_blank">@Bruno-dev</a>.</h3>
     </footer>
 
     <!-- <script src="assets/js/loadPokemon.js"></script> -->
