--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
     <!-- css -->
     <link rel="preload" href="./assets/css/styles.min.css" as="style">
     <link rel="stylesheet" href="assets/css/styles.min.css">
+    <link rel="stylesheet" href="./assets/css/global/animations.css">
+    <link rel="stylesheet" href="./assets/css/global/footer.css">
+    <link rel="stylesheet" href="./assets/css/global/global.css">
+    <link rel="stylesheet" href="./assets/css/global/header.css">
+    <link rel="stylesheet" href="./assets/css/global/pokemoncolors.css">
+    <link rel="stylesheet" href="./assets/css/detalhes/pokemon-detail.css">
+    <link rel="stylesheet" href="./assets/css/detalhes/pokemon-individual.css">
+    <link rel="stylesheet" href="./assets/css/detalhes/pokemon-infos.css">
+    <link rel="stylesheet" href="./assets/css/detalhes/statscolors.css">
+    <link rel="stylesheet" href="./assets/css/home/pokedex.css">
 
     <!-- font roboto -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
