--- a/details.html
+++ b/details.html
@@ -15,6 +15,18 @@
     <!-- css -->
     <link rel="preload" href="./assets/css/styles.min.css" as="style">
     <link rel="stylesheet" href="assets/css/styles.min.css">
+    <link rel="preload" href="./assets/css/styles.min.css" as="style">
+    <link rel="stylesheet" href="assets/css/styles.min.css">
+    <link rel="stylesheet" href="./assets/css/global/animations.css">
+    <link rel="stylesheet" href="./assets/css/global/footer.css">
+    <link rel="stylesheet" href="./assets/css/global/global.css">
+    <link rel="stylesheet" href="./assets/css/global/header.css">
+    <link rel="stylesheet" href="./assets/css/global/pokemoncolors.css">
+    <link rel="stylesheet" href="./assets/css/detalhes/pokemon-detail.css">
+    <link rel="stylesheet" href="./assets/css/detalhes/pokemon-individual.css">
+    <link rel="stylesheet" href="./assets/css/detalhes/pokemon-infos.css">
+    <link rel="stylesheet" href="./assets/css/detalhes/statscolors.css">
+    <link rel="stylesheet" href="./assets/css/home/pokedex.css">
     
     <!-- font roboto -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -50,7 +62,7 @@
     </main>
 
     <footer class="footer container fadeIn" aria-label="Rodapé">
-        <h3>Criado por <a href="https://www.instagram.com/brenda_a_s_dev/" target="_blank">@brenda-a-s-dev</a>.</h3>
+        <h3>Criado por <a href="https://www.instagram.com/edsonbruno107" target="_blank">@bruno-dev</a>.</h3>
     </footer>
 
     <script src="assets/js/pokemon-model.js"></script>
