--- a/details.html
+++ b/details.html
@@ -8,7 +8,7 @@
 
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
 
-    <title>Pokedex | BY BRENDA-A-S</title>
+    <title>Pokedex | EDSON BRUNO</title>
 
     <link rel="shortcut icon" href="assets/imgs/favicon.png" type="image/x-icon">
 
