--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                             Pokemons
                         </a>
                     </li>
+                    <li><a href="./go.html" class="evolution-link">Evolução</a></li> <!-- Novo link -->
                 </ul>
             </nav>
         </div>
