--- a/go.html
+++ b/go.html
@@ -97,7 +97,7 @@
         }
 
         .carousel-info th, .carousel-info td {
-            border-radius: 8px; /* Bordas arredondadas nas células */
+            border-radius: 0px; /* Bordas arredondadas nas células */
         }
 
         .slick-slide {
@@ -208,7 +208,7 @@
     <!-- Notificação de Tutorial -->
     <div class="tutorial-notification" id="tutorialNotification">
         <div>
-            <p><strong>Dica:</strong> Clique em cada imagem para ver a evolução dos Pokémons!</p>
+            <p><strong>Dica:</strong> Clique em cada imagem para ver a evolução dos Pokémons e gire para o lado!</p>
             <p>Essa página mostra as evoluções dos Pokémons.</p>
         </div>
         <button onclick="closeTutorial()">X</button>
