--- a/go.html
+++ b/go.html
@@ -84,7 +84,7 @@
         .carousel-info td {
             background-color: #fff;
             color: #333;
-            border-left: 3px solid #ddd; /* Linha separadora mais elegante */
+            border-left: none; /* Linha separadora mais elegante */
         }
 
         .carousel-info tr:last-child td {
@@ -110,27 +110,31 @@
 
         /* Estilo para a notificação tutorial com fundo branco e borda azul */
         .tutorial-notification {
-            position: fixed;
-            bottom: 20px;
-            left: 20px;
-            background-color: rgba(255, 255, 255, 0.9); /* Fundo branco translúcido */
-            color: black;
-            padding: 20px;
-            border-radius: 10px;
-            border: 5px solid #3B8D99; /* Cor da borda azul estilo Pokédex */
-            z-index: 9999;
-            font-size: 18px;
-            max-width: 350px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            opacity: 0;
-            transform: translateY(100%); /* Inicialmente abaixo da tela */
-            transition: transform 1s ease-out, opacity 1s ease-out;
-        }
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    background-color: rgba(255, 255, 255, 0.95); /* Fundo branco translúcido */
+    color: #333; /* Cor de texto mais suave */
+    padding: 20px;
+    border-radius: 12px; /* Bordas mais arredondadas */
+    border: 4px solid #3B8D99; /* Cor da borda azul estilo Pokédex */
+    z-index: 9999;
+    font-size: 18px;
+    max-width: 350px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Sombras mais suaves */
+    opacity: 0;
+    transform: translateY(100%); /* Inicialmente abaixo da tela */
+    transition: transform 1s ease-out, opacity 1s ease-out;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Fonte elegante e moderna */
+    font-weight: 500; /* Peso de fonte mais elegante */
+    line-height: 1.6; /* Maior espaçamento entre as linhas */
+    letter-spacing: 0.5px; /* Espaçamento entre as letras */
+}
 
-        .tutorial-notification.show {
-            opacity: 1;
-            transform: translateY(0); /* A notificação sobe e aparece */
-        }
+.tutorial-notification.show {
+    opacity: 1;
+    transform: translateY(0); /* Exibe a notificação deslizando para cima */
+}
 
         .tutorial-notification button {
             background: none;
