--- a/go.html
+++ b/go.html
@@ -52,6 +52,10 @@
             font-size: 18px;
             box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2); /* Sombras mais sutis e elegantes */
             transition: transform 1s ease-out, opacity 1s ease-out;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Fonte elegante e moderna */
+    font-weight: 500; /* Peso de fonte mais elegante */
+    line-height: 1.6; /* Maior espaçamento entre as linhas */
+    letter-spacing: 0.5px; /* Espaçamento entre as letras */
         }
 
         .carousel-info.show {
