--- a/go.html
+++ b/go.html
@@ -56,6 +56,7 @@
     font-weight: 500; /* Peso de fonte mais elegante */
     line-height: 1.6; /* Maior espaçamento entre as linhas */
     letter-spacing: 0.5px; /* Espaçamento entre as letras */
+    margin-bottom: 15px;
         }
 
         .carousel-info.show {
@@ -133,6 +134,7 @@
     font-weight: 500; /* Peso de fonte mais elegante */
     line-height: 1.6; /* Maior espaçamento entre as linhas */
     letter-spacing: 0.5px; /* Espaçamento entre as letras */
+    margin: 15px;
 }
 
 .tutorial-notification.show {
